--- a/index.html
+++ b/index.html
@@ -135,5 +135,8 @@
     <div class="overlay" id="overlay"></div>
 
     <script src="js/main.js"></script>
+    <script src="js/cart-customization.js"></script>
+    <script src="js/welcome-animation.js"></script>
+    <script src="js/fun-features.js"></script>
 </body>
 </html>
