--- a/menu.html
+++ b/menu.html
@@ -3,10 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiko's Pizza - Best Pizza in Kenya</title>
+    <title>Menu - Tiko's Pizza</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        .menu-header {
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+                        url('images/menu-bg.jpg') center/cover no-repeat;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            margin-top: 70px;
+        }
+
+        .menu-filters {
+            background: var(--light-gray);
+            padding: 1rem 0;
+            margin-bottom: 2rem;
+        }
+
+        .filter-container {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .filter-btn {
+            padding: 0.5rem 1.5rem;
+            border: none;
+            border-radius: 25px;
+            background: white;
+            cursor: pointer;
+            transition: var(--transition);
+        }
+
+        .filter-btn.active {
+            background: var(--primary-color);
+            color: white;
+        }
+
+        .search-container {
+            max-width: 600px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .search-input {
+            width: 100%;
+            padding: 1rem;
+            border: 2px solid var(--light-gray);
+            border-radius: 25px;
+            font-size: 1rem;
+            transition: var(--transition);
+        }
+
+        .search-input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
+
+        .menu-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+            padding: 2rem 0;
+        }
+
+        .no-results {
+            text-align: center;
+            padding: 2rem;
+            grid-column: 1 / -1;
+        }
+    </style>
 </head>
 <body>
     <!-- Loading Bar -->
@@ -22,8 +95,8 @@
                 <span></span>
             </div>
             <ul class="nav-links">
-                <li><a href="/" class="active">Home</a></li>
-                <li><a href="/menu.html">Menu</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/menu.html" class="active">Menu</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/locations.html">Locations</a></li>
                 <li><a href="/contact.html">Contact</a></li>
@@ -37,49 +110,35 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero parallax-section">
-        <div class="hero-content">
-            <h1 class="text-glow">Delicious Pizza, <br>Delivered Fast</h1>
-            <p>Experience the best pizza in Kenya, made with fresh ingredients and love</p>
-            <div class="hero-buttons">
-                <a href="/menu.html" class="btn btn-primary hover-lift">Order Now</a>
-                <a href="/locations.html" class="btn btn-secondary hover-lift">Find Location</a>
+    <!-- Menu Header -->
+    <header class="menu-header">
+        <div class="container">
+            <h1 class="text-glow">Our Menu</h1>
+            <p>Discover our delicious selection of pizzas</p>
+        </div>
+    </header>
+
+    <!-- Search Section -->
+    <div class="search-container">
+        <input type="text" class="search-input" placeholder="Search pizzas..." id="searchInput">
+    </div>
+
+    <!-- Menu Filters -->
+    <section class="menu-filters">
+        <div class="container">
+            <div class="filter-container">
+                <button class="filter-btn active" data-category="all">All</button>
+                <button class="filter-btn" data-category="vegetarian">Vegetarian</button>
+                <button class="filter-btn" data-category="meat">Meat Lovers</button>
+                <button class="filter-btn" data-category="specialty">Specialty</button>
             </div>
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="features">
-        <div class="container">
-            <h2>Why Choose Tiko's Pizza?</h2>
-            <div class="features-grid">
-                <div class="feature-card card-hover">
-                    <i class="fas fa-pizza-slice"></i>
-                    <h3>Fresh Ingredients</h3>
-                    <p>We use only the freshest ingredients for our pizzas</p>
-                </div>
-                <div class="feature-card card-hover">
-                    <i class="fas fa-truck"></i>
-                    <h3>Fast Delivery</h3>
-                    <p>Quick delivery to your doorstep</p>
-                </div>
-                <div class="feature-card card-hover">
-                    <i class="fas fa-star"></i>
-                    <h3>Best Quality</h3>
-                    <p>Consistently high quality pizzas</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Popular Pizzas Section -->
-    <section class="popular-pizzas">
-        <div class="container">
-            <h2>Our Popular Pizzas</h2>
-            <div class="pizza-grid" id="popularPizzas">
-                <!-- Pizza cards will be added dynamically -->
-            </div>
+    <!-- Menu Grid -->
+    <section class="container">
+        <div class="menu-grid" id="menuGrid">
+            <!-- Menu items will be added dynamically -->
         </div>
     </section>
 
@@ -134,6 +193,7 @@
 
     <div class="overlay" id="overlay"></div>
 
+    <script src="js/menu.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
